# france_travail_data

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
scripts/: client_api.py  config_loader.py  main.py
scripts/utils/: __init__.py
scripts/utils/parser/: base.py  offre.py
scripts/utils/schemas/: authentification.py  base.py  offres.py
