[tool.poetry]
name = "technical-test-mistertemp"
version = "0.1.0"
description = ""
authors = ["Edouard Touze <edouard.touze@holis.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
requests = "^2.32.3"
pylint = "^3.0.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
mypy = "^1.13.0"
black = "^24.10.0"
pre-commit = "^4.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
